--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,18 @@
+# top-most EditorConfig file
 root = true
 
 [*]
 charset = utf-8
-indent_style = tab
+indent_style = space
 end_of_line = lf
-insert_final_newline = true
-trim_trailing_whitespace = true
+
+[*.c]
+indent_size = 4
+
+[*.md]
+indent_size = 4
+
+[Makefile]
+indent_style = tab
+indent_size = 8
+
