--- a/.gitconfig
+++ b/.gitconfig
@@ -108,9 +108,9 @@
 
 [color "branch"]
 
-	current = yellow reverse
+	current = green
 	local = yellow
-	remote = green
+	remote = white
 
 [color "diff"]
 
@@ -121,14 +121,14 @@
 
 [color "status"]
 
-	added = yellow
-	changed = green
+	added = green
+	changed = red
 	untracked = cyan
 
 [commit]
 
 	# https://help.github.com/articles/signing-commits-using-gpg/
-	gpgsign = true
+    # gpgsign = true
 
 [diff]
 
@@ -180,3 +180,6 @@
 [url "git://gist.github.com/"]
 
 	insteadOf = "gist:"
+[user]
+	name = Yanping Li
+	email = [liyanping@gmail.com]
