todo list for git config

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,23 @@
 [alias]
 
+    # TODO
+
+    # STATUS
+    # s = status
+    # ss = status -s
+
+    # LOG
+    # l = oneline
+
+    # CHECKOUT
+    # co = checkout
+
+    # BRANCH
+    # b = branch
+    # ba = branch -a
+    # bl = branch -l
+    # br = branch -r
+
 	# View abbreviated SHA, description, and history graph of the latest 20 commits
 	l = log --pretty=oneline -n 20 --graph --abbrev-commit
 
