--- a/.gitconfig
+++ b/.gitconfig
@@ -19,7 +19,7 @@
     # br = branch -r
 
 	# View abbreviated SHA, description, and history graph of the latest 20 commits
-	l = log --pretty=oneline -n 20 --graph --abbrev-commit
+	l = log --pretty=oneline --graph --abbrev-commit --decorate 
 
 	# View the current working tree status using the short format
 	s = status -s
