tmux conf update

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,8 @@
-set-option -g history-limit 10000
+
+# bigger history
+set-option -g history-limit 20000
+
+# force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf
+
