Support SSH agent forwording in tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,8 @@
+# Remove SSH_AUTH_SOCK to disable tmux automatically resetting the variable
+set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
+
+# Use a symlink to look up SSH authentication, for SSH agent forwarding.
+set-environment -g SSH_AUTH_SOCK ~/.ssh/ssh_auth_sock
 
 # bigger history
 set-option -g history-limit 100000
