TMUX: use current directory for new window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,3 +11,7 @@ set-option -g history-limit 100000
 unbind r
 bind r source-file ~/.tmux.conf
 
+# use current directory for new window
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
