Sort tmux session alphabetically.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,3 +15,6 @@ bind r source-file ~/.tmux.conf
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+# sort session alphabetically
+bind s choose-tree -s -O name
