explicitly set tmux key binding mode to vi

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,9 @@ set-environment -g SSH_AUTH_SOCK ~/.ssh/ssh_auth_sock
 # bigger history
 set-option -g history-limit 100000
 
+# set key binding mode (for scroll)
+set-window-option mode-keys vi
+
 # force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
