--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ set-environment -g SSH_AUTH_SOCK ~/.ssh/ssh_auth_sock
 set-option -g history-limit 100000
 
 # set key binding mode (for scroll)
-set-window-option mode-keys vi
+set-window-option -g mode-keys vi
 
 # force a reload of the config file
 unbind r
