--- a/.gitconfig
+++ b/.gitconfig
@@ -199,7 +199,7 @@
 
 	insteadOf = "gist:"
 [user]
-	name = Yanping Li
-	email = liyanping@gmail.com
+	name =
+	email =
 [branch]
 	autosetuprebase = always
