Turn off automatic rename after rename-window.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,3 +21,6 @@ bind % split-window -h -c "#{pane_current_path}"
 
 # sort session alphabetically
 bind s choose-tree -s -O name
+
+# allow automatic rename, and this flag is disabled after rename-window
+set-option -g automatic-rename on
